
20100728
    - (Jerome) Fix preview size for weekly and monthly printouts. Fix
      printout in horizontal mode.

v1.3.0:
 (see http://code.google.com/p/wxscheduler/source/list for detailed changes)

 20100724
    - Added make tarball target to build a tar.gz package automatically 

 20100216
    - (Jerome) More drawing optimizations; time to refresh the view in
      vertical mode with 40+ schedules back from 18s to 2s. Schedule
      change events now have a 'needsLayout' property; if False, the
      schedule's bounding rect does not change so it's safe to redraw
      only this area.

 20100213
    - (Jerome) Avoid unnecessary repaints, using a bitmap cache. Also
      group consecutive resize events to minimize drawing.

    - (Jerome) Add Freeze/Thaw methods to wxScheduler for batch updates

 20100209
    - (Jerome) Heavy refactoring, faster drawing, better handling of
      scrollbars, better handling of variable-sized calendars

 20100207
    - (Jerome) New event for right click

 20100203
    - (Jerome) Highlight current day

  20100201
    - (Jerome)  Start moving  all actual  drawing code  to  a separate
      class (wxDrawer).  This will allow  theming. In addition  to the
      base drawer, add a  drawer based on wx.GraphicsContext with some
      eye-candy like rounded rectangles and gradients.

  20100131
    - (Jerome) Add horizontal view style
    - (Jerome) Work around a wxWidgets bug (SetToWeekDayInSameWeek)
    - (Jerome) Fix a bug (on Jan 31st 2010, trying to jump to the next
      month would lead to March instead of February)
    - (Jerome) Add a new schedule attribute: foreground color

  20100130
    - (Jerome) Add some new events in the demo.
    - (Jerome) Some fixes and minor refactoring

v1.2.4:
  20100129
    - (Jerome) Some fixes in wxSchedulerCore and wxSchedulerPaint
    - (Jerome) Add support icons in the schedule

v1.2.3:
  20070824
    - (Daniele) Add methods Next() and Previous() for easly navigation in one (default)