@@ -3,6 +3,8 @@
     - (Jerome) Fix preview size for weekly and monthly printouts. Fix
       printout in horizontal mode.
 
+    - (Jerome) Printer setup dialog
+
 v1.3.0:
  (see http://code.google.com/p/wxscheduler/source/list for detailed changes)
 
